--- a/simpleoa/src/main/resources/application.yml
+++ b/simpleoa/src/main/resources/application.yml
@@ -32,11 +32,11 @@ spring:
 mybatis:
   #映射配置文件路径
   mapper-locations: classpath:mybatis/mapper/*.xml
-  type-aliases-package: com.zhangweicloud.springboot.entities  # 所有Entity别名类所在包
+  type-aliases-package: net.northking.springboot.entities  # 所有Entity别名类所在包
   #核心配置文件路径
   config-location: classpath:mybatis/mybatis-config.xml
 logging:
   level:
     com.mengxuegu.springboot.mapper: debug
 server:
-  port: 9000
+  port: 8000
