--- a/simpleoa/pom.xml
+++ b/simpleoa/pom.xml
@@ -74,6 +74,17 @@
             <artifactId>shiro-spring-boot-starter</artifactId>
             <version>1.7.1</version>
         </dependency>
+        <!-- 引入jsp依赖 -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
