资料新增 和 资料查询

--- a/simpleoa/src/main/resources/application.yml
+++ b/simpleoa/src/main/resources/application.yml
@@ -37,6 +37,6 @@ mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
 logging:
   level:
-    com.mengxuegu.springboot.mapper: debug
+    net.northking.springboot.dao: debug
 server:
   port: 8000
