--- a/simpleoa/pom.xml
+++ b/simpleoa/pom.xml
@@ -79,6 +79,12 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
         </dependency>
+        <!-- JSON -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+        </dependency>
 
         <dependency>
             <groupId>jstl</groupId>
