--- a/simpleoa/pom.xml
+++ b/simpleoa/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.76</version>
         </dependency>
+        <!--easyexcel-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.1.6</version>
+        </dependency>
 
         <dependency>
             <groupId>jstl</groupId>
