--- a/simpleoa/src/main/resources/application.yml
+++ b/simpleoa/src/main/resources/application.yml
@@ -40,3 +40,10 @@ logging:
     net.northking.springboot.dao: debug
 server:
   port: 8000
+
+
+#分页pageHelper
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
