--- a/simpleoa/pom.xml
+++ b/simpleoa/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>easyexcel</artifactId>
             <version>2.1.6</version>
         </dependency>
+        <!--pagehelper-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
 
         <dependency>
             <groupId>jstl</groupId>
