--- a/simpleoa/pom.xml
+++ b/simpleoa/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>shiro-spring-boot-starter</artifactId>
             <version>1.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.theborakompanioni</groupId>
+            <artifactId>thymeleaf-extras-shiro</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
         <!-- 引入jsp依赖 -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
